Added about me section

--- a/portolio_site_app/index.html
+++ b/portolio_site_app/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Andy Thomas | Web Dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,11 +18,11 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span><i class="fa-light fa-face-smile"></i></span>
-					<h1>Hi, I'm <strong>Andy Thomas</strong>,<br />
-					A full-stack software engineer</a>.</h1>
-					<p>Feel free to explore my portfolio and learn about my accomplishments. I look <br>
-                       forward to collaborating with you and creating something great together.</p>
+					<span><i class="fa-regular fa-face-smile fa-xl"></i></span>
+					<h1>Hi, I'm <strong>Andy</strong>,<br />
+					a full-stack software engineer</a>.</h1>
+					<p>Feel free to explore my portfolio and see what I've been up to. </br>
+                        I look forward to collaborating and creating something great together.</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -44,46 +44,20 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="main style2">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Three -->
-			<section id="three" class="main style1 special">
-				<div class="container">
+			<section id="two" class="main style2 special">
+                <div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>My Work</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>I invite you to take a tour of my latest projects and check out what I've been working on.
+                    </p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="images/booggleHomeMobile.png" alt="booggleHomePic" /></span>
+							<h3>Booggle-Finance</h3>
+							<p>A full-stack web app that scrapes prices and tracks secondary bourbon market trends.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://booggle-finance.com" class="button">View</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -91,7 +65,7 @@
 							<h3>Magna feugiat lorem</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">View</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -99,8 +73,51 @@
 							<h3>Magna feugiat lorem</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="#" class="button">View</a></li>
 							</ul>
+						</div>
+					</div>
+				</div>
+				
+			</section>
+
+		<!-- Three -->
+			<section id="three" class="main style1 special">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-12-medium">
+							<ul class="major-icons">
+								<li><span class="icon solid style1 major fa-code"></span></li>
+								<li><span class="icon solid style2 major fa-bolt"></span></li>
+            					<li><span class="icon solid style5 major fa-desktop"></span></li>
+								<li><span class="icon solid style4 major fa-cog"></span></li>
+
+
+                                <!-- <li><span class="icon solid style3 major fa-camera-retro"></span></li>
+								<li><span class="icon solid style6 major fa-calendar"></span></li> -->
+							</ul>
+						</div>
+						<div class="col-6 col-12-medium olSectionThree">
+							<header class="major">
+								<h2>My Services</h2>
+							</header>
+                            <p >                                        
+                                My commitment is to deliver finalized projects to my clients that not only fulfill their initial vision but also surpass their expectations. To ensure our collaboration yields favorable outcomes, it is crucial for you to understand how we get there. Here's my approach:
+                            </p>
+                            <ol>
+                                <li>
+                                    <strong>Consult:</strong> The project journey starts with a consultation where we'll have a conversation to understand the project's essence.
+                                </li>
+                                <li>
+                                    <strong>Propose:</strong> Following that, a detailed project proposal that includes a visual preview will be presented, and we'll decide on a plan of action.    
+                                </li>
+                                <li>
+                                    <strong>Create:</strong> During the creation phase, I'll keep clients updated regularly on the project's progress while I create and test it.
+                                </li>
+                                <li>
+                                    <strong>Deploy/Support:</strong> Finally, upon launch, clients will receive the final project and ongoing support to ensure peace of mind.   
+                                </li>
+                            </ol>
 						</div>
 					</div>
 				</div>
@@ -108,16 +125,23 @@
 
 		<!-- Four -->
 			<section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
-					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
-					</ul>
-				</div>
+                <div class=flexContainer>
+                    <div class="container flexChild">
+                        <header class="major">
+                            <h2>I'm a Software Engineer based in Dallas, TX</h2>
+                        </header>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda quo, quis nostrum laboriosam consequatur cupiditate!</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione cumque impedit eius adipisci asperiores, qui debitis beatae accusamus quisquam praesentium, veritatis, quidem commodi officiis molestias iste nam. Eos, velit fugiat.</p>
+    
+                        <ul class="actions special">
+                            <!-- <li><a href="#" class="button wide primary">Sign Up</a></li>
+                            <li><a href="#" class="button wide">Learn More</a></li> -->
+                        </ul>
+                    </div>
+                    <div class="container flexChild2">
+                        <img class="andyImg" src="images/andyImgNoBG.png" alt="Andy Image">
+                    </div>
+                </div>
 			</section>
 
 		<!-- Five -->
@@ -442,7 +466,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
