--- a/portolio_site_app/index.html
+++ b/portolio_site_app/index.html
@@ -24,7 +24,7 @@
 					<p>Feel free to explore my portfolio and see what I've been up to. </br>
                         I look forward to collaborating and creating something great together.</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#one" class="button scrolly">Bienvenido</a></li>
 					</ul>
 				</div>
 			</section>
@@ -55,7 +55,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/booggle-home.png" alt="booggleHomePic" /></span>
 							<h3>Booggle-Finance</h3>
-							<p>A full-stack web app that scrapes prices and tracks secondary bourbon market trends.</p>
+							<p>A full-stack web app that scrapes historical bourbon pricing data and tracks market trends.</p>
 							<ul class="actions special">
 								<li><a href="https://booggle-finance.com" class="button">View</a></li>
 							</ul>
